<FrameLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dcollioni.projetocliente.MainActivity"
    tools:ignore="MergeRootFrame"
    android:background="@color/azul" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="440dp"
        android:layout_margin="10dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:showDividers="end" >

            <TextView
                android:id="@+id/tvNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:labelFor="@+id/etNome"
                android:text="@string/nome" />

            <EditText
                android:id="@+id/etNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:inputType="text" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <TextView
                android:id="@+id/tvEstadoCivil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:labelFor="@+id/rgEstadoCivil"
                android:text="@string/estado_civil" />

            <RadioGroup
                android:id="@+id/rgEstadoCivil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0" >

                <RadioButton
                    android:id="@+id/rdSolteiro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/solteiro"
                     />

                <RadioButton
                    android:id="@+id/rdCasado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/casado" />
            </RadioGroup>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <TextView
                android:id="@+id/tvPreferencias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:labelFor="@+id/cbContaCorrente"
                android:text="@string/preferencias" />

            <CheckBox
                android:id="@+id/cbContaCorrente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/conta_corrente" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" >

            <TextView
                android:id="@+id/tvCartaoCredito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:text="@string/cartao_credito" />

            <ToggleButton
                android:id="@+id/tbCartaoCredito"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="@string/inativo"
                android:textOn="@string/ativo" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill" >

            <Button
                android:id="@+id/btnCriar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/criar"
                android:layout_weight="1" />

        </TableRow>

    </TableLayout>

</FrameLayout>